Fixing default pagination spacing

--- a/sass/lsx/_header.scss
+++ b/sass/lsx/_header.scss
@@ -273,8 +273,6 @@ nav {
 	}
 
 	&.paging-navigation {
-		margin-bottom: 60px;
-
 		.lsx-breaker {
 			margin-bottom: 60px;
 		}
